--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,3 @@
-quarkus.http.port=5432
-quarkus.datasource.db-kind=postgresql
-quarkus.datasource.jdbc.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/productdb}
-quarkus.datasource.username=${DATABASE_USERNAME:postgres}
-quarkus.datasource.password=${DATABASE_PASSWORD:password}
-
 product.catalog.default-category=General
 product.catalog.page-size=10
+quarkus.datasource.devservices.enabled=false
